--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,6 +3,7 @@
   font-size: 18px;
   font-style: normal;
   line-height: 22px;
+  font-weight: 400;
   color: #FFFFFF;
   max-width: 336px;
   grid-column: -3 / -1;
