--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,6 +2,8 @@
   padding: 0;
   width: 150px;
   height: 50px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   background-color: #000000;
   background-image: url(../../../images/profile__add-button.svg);
