--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,7 @@
 @import url(../blocks/galery/__card-description/galery__card-description.css);
 @import url(../blocks/galery/__card-title/galery__card-title.css);
 @import url(../blocks/galery/__card-like-button/galery__card-like-button.css);
+
+/* Footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
