--- a/blocks/galery/__card-title/galery__card-title.css
+++ b/blocks/galery/__card-title/galery__card-title.css
@@ -1,5 +1,5 @@
 .galery__card-title {
-  margin: 0 0 0 21px;
+  margin: 25px 0 32px 21px;
   font-size: 24px;
   font-style: normal;
   line-height: 29px;
