--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.galery__card-like-button {
+.card__like-button {
   margin: 0 20px 0 0;
   padding: 0;
   width: 22px;
@@ -10,7 +10,7 @@
   border: none;
 }
 
-.galery__card-like-button:hover {
+.card__like-button:hover {
   opacity: 0.5;
   cursor: pointer;
 }
