--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,7 @@
 @import url(../blocks/card/__description/card__description.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
