--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -7,6 +7,7 @@
   background-image: url(../../../images/galery__card-like-button.svg);
   background-repeat: no-repeat;
   background-position: center;
+  object-fit: cover;
   border: none;
 }
 
