add image popup

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 .popup {
-  display: none;
+  position: fixed;
+  visibility: hidden;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -7,6 +8,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  /* transition: visibility .7s; */
 }
 
 .popup::before {
