--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  display: flex;
   position: fixed;
   visibility: hidden;
   justify-content: center;
@@ -8,7 +9,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  /* transition: visibility .7s; */
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s;
 }
 
 .popup::before {
