--- a/pages/index.css
+++ b/pages/index.css
@@ -46,6 +46,7 @@
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-caption/popup__image-caption.css);
+@import url(../blocks/popup/_theme/popup_theme_black.css);
 
 /* Form */
 @import url(../blocks/form/form.css);
