--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,10 +1,12 @@
 .form__input {
+  width: 100%;
   margin: 0;
   padding: 0 0 13px 0;
   font-size: 14px;
   font-style: normal;
   line-height: 17px;
   font-weight: 400;
+  text-align: left;
   color: #000000;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
