--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 282px;
+  width: 282px;
   background-color: #FFFFFF;
   border-radius: 10px;
 }
