--- a/src/blocks/form/__input-container/form__input-container.css
+++ b/src/blocks/form/__input-container/form__input-container.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  margin: 0 36px;
+  margin: 16px 36px 48px;
   padding: 0;
   border: none;
 }
 
 @media screen and (max-width: 640px) {
   .form__input-container {
-    margin: 0 22px;
+    margin: 37px 22px 58px;
   }
 }
