--- a/src/blocks/form/__submit-button/form__submit-button.css
+++ b/src/blocks/form/__submit-button/form__submit-button.css
@@ -1,5 +1,5 @@
 .form__submit-button {
-  margin: 48px 36px 37px;
+  margin: 0 36px 37px;
   padding: 0;
   border: none;
   height: 50px;
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 640px) {
   .form__submit-button {
-    margin: 45px 22px 25px;
+    margin: 0px 22px 25px;
     height: 46px;
     font-size: 14px;
     line-height: 17px;
