--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@
 .header__logo{height:33px;margin-left:0;width:142px}.header__logo:hover{opacity:.6}@media screen and (max-width:950px){.header__logo{height:25px;margin-left:27px;width:104px}}
 .profile{align-items:center;display:flex;flex-direction:row;justify-content:space-between;margin:40px auto 50px;max-width:880px}@media screen and (max-width:950px){.profile{margin:40px 27px 50px}}@media screen and (max-width:640px){.profile{flex-direction:column;margin:42px 19px 36px}}
 .profile__user-card{display:flex;flex-direction:row}@media screen and (max-width:640px){.profile__user-card{align-items:center;flex-direction:column}}
-.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
+.profile__edit-avatar-button{background:transparent;border:none;border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;outline:none;padding:0;transition:background-color .2s linear;width:120px}.profile__edit-avatar-button:hover{background:rgba(0,0,0,.8) url(images/profile__edit-button.8667ac4a523e8fc42e59.svg) 50% /26px no-repeat;color:red;cursor:pointer;outline:1px solid #000}
+.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;position:relative;width:120px;z-index:-1}
 .profile__info{grid-column-gap:18px;grid-row-gap:16px;align-items:center;align-self:center;display:grid;grid-template-columns:1fr 24px;margin:0 0 0 30px;max-width:336px}@media screen and (max-width:640px){.profile__info{grid-column-gap:10px;grid-row-gap:14px;grid-template-columns:1fr 18px;margin:26px 0 36px;max-width:282px}}
 .profile__name{color:#fff;font-size:42px;font-style:normal;font-weight:500;line-height:1.14;margin:0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:640px){.profile__name{font-size:27px;line-height:33px;max-width:189px;text-align:center}}
 .profile__edit-button{background-color:#000;background-image:url(images/profile__edit-button.8667ac4a523e8fc42e59.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;box-sizing:border-box;height:24px;padding:0;width:24px}.profile__edit-button:hover{cursor:pointer;opacity:.6}@media screen and (max-width:640px){.profile__edit-button{height:18px;width:18px}}
@@ -18,8 +19,10 @@
 .card__image{background-color:#000;border-top-left-radius:10px;border-top-right-radius:10px;color:#fff;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}.card__image:hover{cursor:pointer}
 .card__description{align-items:center;display:flex;flex-direction:row;justify-content:space-between}
 .card__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:25px 0 32px 21px;max-width:218px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__like-container{align-items:center;display:flex;flex-direction:column}
 .card__like-button{background-color:#fff;background-image:url(images/galery__card-like-button.87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;border:none;height:19px;margin:0 20px 0 0;-o-object-fit:cover;object-fit:cover;padding:0;width:22px}.card__like-button:hover{cursor:pointer;opacity:.5}
 .card__like-button_active{background-image:url(images/galery__card-like-button_active.e787eeb70bb65b7b453a.svg);opacity:1}
+.card__like-count{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:0 20px 0 0;max-width:22px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .card__delete-button{background-color:transparent;background-image:url(images/Trash.cbc09a894bdd4c956365.svg);background-position:50%;background-repeat:no-repeat;border:none;height:19px;-o-object-fit:cover;object-fit:cover;position:absolute;right:20px;top:20px;width:18px}.card__delete-button:hover{cursor:pointer;opacity:.5}
 .footer{margin:66px auto 60px;max-width:880px}@media screen and (max-width:950px){.footer{margin:48px 0 36px 19px}}
 .footer__copyright{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0}@media screen and (max-width:640px){.footer__copyright{font-size:14px;line-height:17px}}
@@ -32,11 +35,11 @@
 .popup__image-caption{color:#fff;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin:10px auto 0 0;max-width:75vw}
 .popup_theme_black:before{opacity:.9}
 .form{background-color:#fff;border-radius:10px;display:flex;flex-direction:column;margin:0 auto;padding:0;width:430px}@media screen and (max-width:640px){.form{width:282px}}
-.form__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:34px 0 54px 36px;max-width:100%}@media screen and (max-width:640px){.form__title{font-size:18px;line-height:22px;margin:25px 0 75px 22px}}
-.form__input-container{border:none;display:flex;flex-direction:column;gap:32px;margin:0 36px;padding:0}@media screen and (max-width:640px){.form__input-container{margin:0 22px}}
+.form__title{color:#000;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:34px 0 38px 36px;max-width:100%}@media screen and (max-width:640px){.form__title{font-size:18px;line-height:22px;margin:25px 0 38px 22px}}
+.form__input-container{border:none;display:flex;flex-direction:column;gap:32px;margin:16px 36px 48px;padding:0}@media screen and (max-width:640px){.form__input-container{margin:37px 22px 58px}}
 .form__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);box-sizing:border-box;color:#000;font-size:14px;font-style:normal;font-weight:400;line-height:17px;margin:0;padding:0 0 13px;text-align:left;width:100%}
 .form__input_type_error{border-bottom-color:red}
-.form__submit-button{background-color:#000;border:none;border-radius:2px;box-sizing:border-box;color:#fff;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:48px 36px 37px;padding:0;text-align:center}.form__submit-button:hover{cursor:pointer;opacity:.8}@media screen and (max-width:640px){.form__submit-button{font-size:14px;height:46px;line-height:17px;margin:45px 22px 25px}}
+.form__submit-button{background-color:#000;border:none;border-radius:2px;box-sizing:border-box;color:#fff;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:0 36px 37px;padding:0;text-align:center}.form__submit-button:hover{cursor:pointer;opacity:.8}@media screen and (max-width:640px){.form__submit-button{font-size:14px;height:46px;line-height:17px;margin:0 22px 25px}}
 .form__field{display:block;position:relative}
 .form__input-error{color:red;font-size:12px;font-style:normal;font-weight:400;left:0;line-height:15px;margin:0;opacity:0;padding:0;position:absolute;top:calc(100% + 5px)}
 .form__input-error_visible{opacity:1}
